@@ -1,5 +1,9 @@
 1999-08-16  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* m4/depout.m4 (AM_OUTPUT_DEPENDENCY_COMMANDS): Run for loop only
+	if AMDEP is empty.
+	* aclocal.m4, configure: Rebuilt.
+
 	* m4/depend.m4 (AMDEPBACKSLASH): Define.
 	* depend2.am (@EXT@.o, @EXT@.lo, @EXT@.obj): Use AMDEPBACKSLASH.
 
